Bug 378694 - Kicker's sub-menus are covered up by Plasma panels
Summary: Kicker's sub-menus are covered up by Plasma panels
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.22.4
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
: 404336 407741 408486 410100 414912 418828 428366 433167 437134 439616 441913 441996 443622 472681 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-12 13:20 UTC by Germano Massullo (Thetra)
Modified: 2023-11-15 22:36 UTC (History)
25 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.1
Sentry Crash Report:


Attachments
Kicker menu entries going bellow plasma panel under Wayland (246.07 KB, image/png)
2019-02-14 14:38 UTC, pmargeti34
Details
Fixed on Neon unstable (797.79 KB, image/png)
2020-03-14 11:13 UTC, Patrick Silva
Details
bug on neon unstable (159.58 KB, image/png)
2020-06-28 10:57 UTC, Patrick Silva
Details
Border artifacts and overlapped menu at KDE Plasma 5.22.4 (275.84 KB, image/png)
2021-08-13 06:39 UTC, Andrey E.
Details
plasma 5.22.4 with latte-dock (182.85 KB, image/png)
2021-09-02 20:11 UTC, Anton
Details
Glitchy shadows and overlapped menu at KDE Plasma 5.22.5 (288.43 KB, image/png)
2021-09-26 17:00 UTC, Andrey E.
Details
Fedora 35 Kinoite (25-Sep-2021), KDE Plasma 5.22.4, bug is reproducible (288.43 KB, image/png)
2021-09-26 17:08 UTC, Andrey E.
Details
Fedora 35 Kinoite (25-Sep-2021), KDE Plasma 5.22.4, bug is reproducible (595.96 KB, image/png)
2021-09-26 17:12 UTC, Andrey E.
Details
screenshot of Plasma 5.23 (208.76 KB, image/png)
2021-10-14 18:55 UTC, Patrick Silva
Details
KDE Neon, Plasma 5.23.0, bug is not fixed (216.73 KB, image/png)
2021-10-15 15:28 UTC, Andrey E.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Germano Massullo (Thetra) 2017-04-12 13:20:03 UTC
In Wayland, "Applicatins menu" long submenus are:
- cutted;
- misplaced;
- and you cannot scroll to see all entries

Plasma 5.9.4
tested on VGA drivers i915 and AMDGPU 4.10.8-200.fc25.x86_64 and Mesa 13
Comment 1 Alexander Mentyu 2017-08-17 14:58:04 UTC
Seems related to https://bugs.kde.org/show_bug.cgi?id=383483
Comment 2 David Edmundson 2019-01-03 23:12:59 UTC
Is this still an issue?
Comment 3 Bug Janitor Service 2019-01-18 04:33:08 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 4 Patrick Silva 2019-01-23 17:22:24 UTC
Related: when I use kicker on neon dev unstable under Wayland, last option of "Power/Session" submenu is hidden behind plasma panel.
Comment 5 Bug Janitor Service 2019-02-07 04:33:07 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 6 Germano Massullo (Thetra) 2019-02-07 19:14:54 UTC
(In reply to Patrick Silva from comment #4)
> Related: when I use kicker on neon dev unstable under Wayland, last option
> of "Power/Session" submenu is hidden behind plasma panel.

Then I would say that it still happens. I will try to add more details of mine as soon as possible
Comment 7 Patrick Silva 2019-02-14 13:11:08 UTC
*** Bug 404336 has been marked as a duplicate of this bug. ***
Comment 8 pmargeti34 2019-02-14 14:38:56 UTC
Created attachment 118073 [details]
Kicker menu entries going bellow plasma panel under Wayland

Sorry for the duplicate bug entry, it didn't show up on bugzilla search.
Confirming the issue.
Comment 9 Patrick Silva 2019-05-19 22:49:16 UTC
*** Bug 407741 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2019-06-10 20:34:09 UTC
*** Bug 408486 has been marked as a duplicate of this bug. ***
Comment 11 Loren 2019-06-11 17:28:34 UTC
Bug still present in 5.16 (wayland session only)
Comment 12 Patrick Silva 2019-07-22 10:31:31 UTC
*** Bug 410100 has been marked as a duplicate of this bug. ***
Comment 13 Patrick Silva 2019-12-07 06:44:08 UTC
*** Bug 414912 has been marked as a duplicate of this bug. ***
Comment 14 Benjamin Smith 2019-12-07 17:30:46 UTC
This is still happening in Plasma 5.17.4 with Frameworks 5.64 and QT 5.13.2.
Comment 15 Patrick Silva 2020-03-13 22:30:50 UTC
*** Bug 418828 has been marked as a duplicate of this bug. ***
Comment 16 Patrick Silva 2020-03-14 11:13:30 UTC
Created attachment 126776 [details]
Fixed on Neon unstable

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.1
Comment 17 Patrick Silva 2020-03-14 11:21:18 UTC
Nevermind. The last entry of the submenus is still hidden behind the panel. :(
Comment 18 magiblot 2020-04-30 21:08:38 UTC
What causes this issue? If you run plasmashell under Xwayland (QT_QPA_PLATFORM=xcb) the behaviour is the same as in X11.
Comment 19 Patrick Silva 2020-05-14 22:31:47 UTC
Plasma 5.19 beta is affected.

Operating System: Arch Linux 
KDE Plasma Version: 5.18.90
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0 rc2
Comment 20 Nate Graham 2020-06-27 21:14:44 UTC
I wonder if this was fixed by https://invent.kde.org/plasma/kwin/-/merge_requests/60. I can't reproduce it with git master.

Could someone with the ability to test git master stuff test?
Comment 21 Patrick Silva 2020-06-28 10:57:00 UTC
Created attachment 129737 [details]
bug on neon unstable

It's still happening on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2
Comment 22 Nate Graham 2020-06-28 15:49:31 UTC
Darn. Thanks for confirming. I see what you mean now and I can reproduce.
Comment 23 Mosin 2020-07-02 04:02:23 UTC
This still occurs in latest neon-unstable. The placement of the menu does seem to consider size of its panel. This issue doesn't happen if the panel height is 22 or below. However if size is 23 or bigger then this issue occurs and the menu can stretch to the bottom of the screen, covering 1 or more entries.
Comment 24 Sebastian Turzański 2020-09-22 07:12:06 UTC
I confirm the bug still exists in kwin 5.19.5 in opensuse tumbleweed 20200916
Comment 25 Vlad Zahorodnii 2020-09-22 11:26:06 UTC
I assume that the kicker window is a normal toplevel window, in which case this bug can be fixed only by porting plasma to the layer-shell protocol.
Comment 26 Vlad Zahorodnii 2020-09-22 11:26:42 UTC
(kwin already supports the layer-shell protocol)
Comment 27 Vlad Zahorodnii 2020-10-28 19:33:11 UTC
*** Bug 428366 has been marked as a duplicate of this bug. ***
Comment 28 kelnio@yahoo.com 2020-11-12 00:35:05 UTC
I can confirm that this bug still exists in KDE neon 5.20, Plasma version 5.20.3; especially when the panel is at the top of the screen and when using the Application Dashboard.
Comment 29 Bruno Guedes 2020-12-14 17:45:56 UTC
I can Also confirm this in plasma 5.20.80

system:

Operating System: Manjaro Linux
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 5.9.14-2-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 7,2 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 520
Comment 30 Nate Graham 2021-02-22 00:43:03 UTC
*** Bug 433167 has been marked as a duplicate of this bug. ***
Comment 31 Nate Graham 2021-02-22 00:46:42 UTC
Number of dupes piling up; raising priority.
Comment 32 Nate Graham 2021-05-18 20:54:23 UTC
*** Bug 437134 has been marked as a duplicate of this bug. ***
Comment 33 Patrick Silva 2021-07-08 00:49:53 UTC
*** Bug 439616 has been marked as a duplicate of this bug. ***
Comment 34 Andrey E. 2021-08-13 06:39:33 UTC
Created attachment 140681 [details]
Border artifacts and overlapped menu at KDE Plasma 5.22.4

That bug is still reproduced at Plasma 5.22.4.
Also, there are some problems with shades at border.

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-25-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 4500U with Radeon Graphics
Memory: 5.7 ГиБ of RAM
Graphics Processor: AMD RENOIR
Comment 35 Nate Graham 2021-09-02 18:36:28 UTC
*** Bug 441913 has been marked as a duplicate of this bug. ***
Comment 36 Anton 2021-09-02 20:07:24 UTC
bug still persists

Operating System: Manjaro Linux
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Kernel Version: 5.13.6-xanmod2-MANJARO (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 31,3 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2
Comment 37 Anton 2021-09-02 20:11:39 UTC
Created attachment 141256 [details]
plasma 5.22.4 with latte-dock
Comment 38 Patrick Silva 2021-09-07 11:40:08 UTC
*** Bug 441996 has been marked as a duplicate of this bug. ***
Comment 39 Andrey 2021-09-13 19:04:02 UTC
Git commit 8de4f9e6995b346dc81292e82afe8b8b1d7ce51d by Andrey Butirsky.
Committed on 13/09/2021 at 19:03.
Pushed by butirsky into branch 'beneath_menus'.

fix: Kicker's sub-menus are covered up by Plasma panels

M  +2    -0    src/abstract_client.cpp

https://invent.kde.org/plasma/kwin/commit/8de4f9e6995b346dc81292e82afe8b8b1d7ce51d
Comment 40 Nate Graham 2021-09-14 13:35:36 UTC
Not actually fixed yet. That commit was not merged to master. However a follow-up MR is in process at https://invent.kde.org/plasma/kwin/-/merge_requests/1413.
Comment 41 Bug Janitor Service 2021-09-15 13:03:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1061
Comment 42 Bug Janitor Service 2021-09-15 13:15:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwayland-integration/-/merge_requests/13
Comment 43 Andrey 2021-09-15 16:19:51 UTC
Git commit 18fbdde4d8c5337e2513ae01c24aece2fd845f61 by Andrey Butirsky.
Committed on 15/09/2021 at 16:18.
Pushed by butirsky into branch 'master'.

fix: Kicker's sub-menus are covered up by Plasma panels

PlasmaQuick::Dialog has it's own WindowType which should be set instead,
otherwise once set NET::WindowType gets smashed by consequent
DialogPrivate::applyType() calls

M  +1    -1    applets/kicker/plugin/submenu.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/18fbdde4d8c5337e2513ae01c24aece2fd845f61
Comment 45 Andrey 2021-09-16 09:53:55 UTC
Git commit da7ddbb626fd6a9be797736f27b3ad5da3bc25a8 by Andrey Butirsky.
Committed on 16/09/2021 at 09:53.
Pushed by butirsky into branch 'master'.

fix: Kicker's sub-menus are covered up by Plasma panels

Pairing commit for P-W

M  +1    -0    src/windowsystem/windowsystem.cpp

https://invent.kde.org/plasma/kwayland-integration/commit/da7ddbb626fd6a9be797736f27b3ad5da3bc25a8
Comment 46 Andrey 2021-09-16 10:03:41 UTC
Please note even with the patch, Kicker sub-menus sometimes get rendered as without.
Happens suddenly and then restores itself after some refocusing etc.
I don't have reliable reproducer yet, feedback for the patch is welcomed.
Comment 47 Andrey 2021-09-17 15:49:44 UTC
(In reply to Andrey from comment #46)
> Please note even with the patch, Kicker sub-menus sometimes get rendered as
> without.
> Happens suddenly and then restores itself after some refocusing etc.
> I don't have reliable reproducer yet, feedback for the patch is welcomed.

Solved in bug 442605
Comment 48 Andrey E. 2021-09-26 17:00:38 UTC
Created attachment 141927 [details]
Glitchy shadows and overlapped menu at KDE Plasma 5.22.5

That bug is still reproducible.

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-36-generic (64-bit)
Graphics Platform: X11
Processors: 6 × AMD Ryzen 5 4500U with Radeon Graphics
Memory: 5.7 ГиБ of RAM
Graphics Processor: AMD RENOIR
Comment 49 Andrey E. 2021-09-26 17:08:03 UTC
Created attachment 141928 [details]
Fedora 35 Kinoite (25-Sep-2021), KDE Plasma 5.22.4, bug is reproducible
Comment 50 Pawel 2021-09-26 17:10:06 UTC
this is fixed in the latest master - I can confirm the bug is not present on neon unstable. you seem to be using 5.22.5 where the fix has not landed
Comment 51 Andrey E. 2021-09-26 17:12:01 UTC
Created attachment 141929 [details]
Fedora 35 Kinoite (25-Sep-2021), KDE Plasma 5.22.4, bug is reproducible

Sorry, I attached wrong screenshot.
Comment 52 Andrey E. 2021-09-26 17:21:07 UTC
(In reply to Andrey E. from comment #48)
> Graphics Platform: X11

Wayland. I made a little typo while changing the sessions.

(In reply to Pawel from comment #50)
> this is fixed in the latest master - I can confirm the bug is not present on
> neon unstable. you seem to be using 5.22.5 where the fix has not landed

How long does it take to port that patch to stable branch?
Comment 53 Pawel 2021-09-26 17:23:38 UTC
(In reply to Andrey E. from comment #52)
> (In reply to Andrey E. from comment #48)
> > Graphics Platform: X11
> 
> Wayland. I made a little typo while changing the sessions.
> 
> (In reply to Pawel from comment #50)
> > this is fixed in the latest master - I can confirm the bug is not present on
> > neon unstable. you seem to be using 5.22.5 where the fix has not landed
> 
> How long does it take to port that patch to stable branch?

I don't know if the team will port it to the stable branch at all. 
It may only be available in a future release - but I will let the plasma team confirm
Comment 54 Nate Graham 2021-09-26 18:36:06 UTC
No more 5.22 releases are planned, so you'll have to upgrade to 5.23 to get the fix.
Comment 55 Patrick Silva 2021-10-12 13:16:55 UTC
*** Bug 443622 has been marked as a duplicate of this bug. ***
Comment 56 Patrick Silva 2021-10-14 18:55:10 UTC
Created attachment 142444 [details]
screenshot of Plasma 5.23

Unfortunately I can reproduce this bug consistently on Plasma 5.23.

Operating System: Arch Linux
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 57 Pawel 2021-10-14 19:47:28 UTC
same on Arch Linux:

Operating System: Arch Linux
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.13.0-1-amd-staging-drm-next-git-01198-g8ae23c1943fd (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 5700 XT

Seems to be fixed in neon unstable on latest master.
Comment 58 Nate Graham 2021-10-15 15:09:51 UTC
Cannot reproduce on current git master. Perhaps some part of the fix didn't make it until Plasma 5.24 or Frameworks 5.78
Comment 59 Andrey E. 2021-10-15 15:28:34 UTC
Created attachment 142476 [details]
KDE Neon, Plasma 5.23.0, bug is not fixed

Operating System: KDE neon 5.23
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-37-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 4500U with Radeon Graphics
Memory: 5.7 ГиБ of RAM
Graphics Processor: AMD RENOIR

Still reproducible.
Comment 60 Vlad Zahorodnii 2021-10-15 15:43:49 UTC
Git commit 3cea874d8ed333bc0d79f665765a52b70d457757 by Vlad Zahorodnii, on behalf of Andrey Butirsky.
Committed on 15/10/2021 at 15:43.
Pushed by vladz into branch 'Plasma/5.23'.

fix: Kicker's sub-menus are covered up by Plasma panels

Pairing commit for P-W


(cherry picked from commit da7ddbb626fd6a9be797736f27b3ad5da3bc25a8)

M  +1    -0    src/windowsystem/windowsystem.cpp

https://invent.kde.org/plasma/kwayland-integration/commit/3cea874d8ed333bc0d79f665765a52b70d457757
Comment 61 Nate Graham 2021-10-15 15:45:07 UTC
Ah, someone forgot a cherry-pick.
Comment 62 Nate Graham 2023-09-07 18:39:42 UTC
*** Bug 472681 has been marked as a duplicate of this bug. ***
Comment 63 Pawel 2023-11-13 09:17:34 UTC
hi Nate,

This problem is back in plasma 6 alpha - 5.27.80:

Operating System: Arch Linux 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.6.1-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 5900X 12-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 6800 XT

Operating System: Arch Linux 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.6.1-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 5900X 12-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 6800 XT
Comment 64 Nate Graham 2023-11-15 22:36:36 UTC
See Bug 465354.