fix: Kicker's sub-menus are covered up by Plasma panels

PlasmaQuick::Dialog has it's own WindowType which should be set instead,
otherwise once set NET::WindowType gets smashed by consequent
DialogPrivate::applyType() calls

BUG: 378694